force-app/main/default/objects/Temporal_Matriculas_X__c/Temporal_Matriculas_X__c.object-meta.xml
<CustomObject>
    <label>Temporal Matricula X</label>
    <nameField>
        <label>Temporal Matricula X</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Temporal Matriculas X</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>