force-app/main/default/objects/Temporal_Matriculas_X__c/fields/Benefit_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Benefit Assignment</label>
    <referenceTo>BenefitAssignment</referenceTo>
    <relationshipLabel>Temporal Matriculas X</relationshipLabel>
    <relationshipName>Temporal_Matriculas_X</relationshipName>
    <type>Lookup</type>
</CustomField>