force-app/main/default/objects/Temporal_Matriculas_X__c/fields/CN_PRECIOR__c.field-meta.xml
<CustomField>
    <fullName>CN_PRECIOR__c</fullName>
    <label>CN_PRECIOR</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>