force-app/main/default/objects/Temporal_Matriculas_X__c/fields/CU_TIPO__c.field-meta.xml
<CustomField>
    <fullName>CU_TIPO__c</fullName>
    <label>CU_TIPO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>