force-app/main/default/objects/Temporal_Matriculas_X__c/fields/Descripci_n_Error__c.field-meta.xml
<CustomField>
    <fullName>Descripci_n_Error__c</fullName>
    <label>Descripción Error</label>
    <length>250</length>
    <type>Text</type>
</CustomField>