force-app/main/default/objects/Temporal_Matriculas_X__c/fields/FA__c.field-meta.xml
<CustomField>
    <fullName>FA__c</fullName>
    <label>FA</label>
    <type>Date</type>
</CustomField>