force-app/main/default/objects/Temporal_Matriculas_X__c/fields/Fecha_Carga_c__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Carga_c__c</fullName>
    <label>Fecha_Carga__c</label>
    <type>Date</type>
</CustomField>