force-app/main/default/objects/Temporal_Matriculas_X__c/fields/MM_ALUMNO__c.field-meta.xml
<CustomField>
    <fullName>MM_ALUMNO__c</fullName>
    <label>MM_ALUMNO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>