force-app/main/default/objects/Temporal_Matriculas_X__c/fields/MM_ANULA__c.field-meta.xml
<CustomField>
    <fullName>MM_ANULA__c</fullName>
    <label>MM_ANULA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>