force-app/main/default/objects/Temporal_Matriculas_X__c/fields/MM_ANUOPE__c.field-meta.xml
<CustomField>
    <fullName>MM_ANUOPE__c</fullName>
    <label>MM_ANUOPE</label>
    <type>Date</type>
</CustomField>