force-app/main/default/objects/Temporal_Matriculas_X__c/fields/MM_BONOS__c.field-meta.xml
<CustomField>
    <fullName>MM_BONOS__c</fullName>
    <label>MM_BONOS</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>