force-app/main/default/objects/Temporal_Matriculas_X__c/fields/MM_CURSO__c.field-meta.xml
<CustomField>
    <fullName>MM_CURSO__c</fullName>
    <label>MM_CURSO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>