force-app/main/default/objects/Temporal_Matriculas_X__c/fields/MM_FECHAS__c.field-meta.xml
<CustomField>
    <fullName>MM_FECHAS__c</fullName>
    <label>MM_FECHAS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>