force-app/main/default/objects/Temporal_Matriculas_X__c/fields/MM_FECMAT__c.field-meta.xml
<CustomField>
    <fullName>MM_FECMAT__c</fullName>
    <label>MM_FECMAT</label>
    <type>Date</type>
</CustomField>