force-app/main/default/objects/Temporal_Matriculas_X__c/fields/MM_FILES__c.field-meta.xml
<CustomField>
    <fullName>MM_FILES__c</fullName>
    <label>MM_FILES</label>
    <length>255</length>
    <type>Text</type>
</CustomField>