force-app/main/default/objects/Temporal_Matriculas_X__c/fields/MM_MAT_PAGOS__c.field-meta.xml
<CustomField>
    <fullName>MM_MAT_PAGOS__c</fullName>
    <label>MM_MAT_PAGOS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>