force-app/main/default/objects/Temporal_Matriculas_X__c/fields/MM_NIVEL__c.field-meta.xml
<CustomField>
    <fullName>MM_NIVEL__c</fullName>
    <label>MM_NIVEL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>