force-app/main/default/objects/Temporal_Matriculas_X__c/fields/MM_NIVSIG__c.field-meta.xml
<CustomField>
    <fullName>MM_NIVSIG__c</fullName>
    <label>MM_NIVSIG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>