force-app/main/default/objects/Temporal_Matriculas_X__c/fields/MM_ORDMAT__c.field-meta.xml
<CustomField>
    <fullName>MM_ORDMAT__c</fullName>
    <label>MM_ORDMAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>