force-app/main/default/objects/Temporal_Matriculas_X__c/fields/MM_PROPUES__c.field-meta.xml
<CustomField>
    <fullName>MM_PROPUES__c</fullName>
    <label>MM_PROPUES</label>
    <length>255</length>
    <type>Text</type>
</CustomField>