force-app/main/default/objects/Temporal_Matriculas_X__c/fields/MM_TIPALU__c.field-meta.xml
<CustomField>
    <fullName>MM_TIPALU__c</fullName>
    <label>MM_TIPALU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>