force-app/main/default/objects/Temporal_Matriculas_X__c/fields/REPE_CURSO__c.field-meta.xml
<CustomField>
    <fullName>REPE_CURSO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>REPE_CURSO</label>
    <type>Checkbox</type>
</CustomField>