force-app/main/default/objects/Temporal_Matriculas_X__c/fields/REPE_NIVEL__c.field-meta.xml
<CustomField>
    <fullName>REPE_NIVEL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>REPE_NIVEL</label>
    <type>Checkbox</type>
</CustomField>